Update scrollbar theme after viewport propagation.

We used to pass through html and body style recalc twice for viewport
style propagation. When we moved to propagating such styles to after the
style recalc, the viewport style is not up-to-date right after body style
is calculated and overlay scrollbar theming did not update correctly.
Instead move the theme update to PropagateStyleToViewport after style is
set on LayoutView.

Bug: 811725
Change-Id: If51c580b7162f512377eecb48d85ca71bd5e7628
Reviewed-on: https://chromium-review.googlesource.com/921801
Reviewed-by: Steve Kobes <skobes@chromium.org>
Commit-Queue: Rune Lillesveen <futhark@chromium.org>
Cr-Commit-Position: refs/heads/master@{#537149}
Former-commit-id: d2c6bc84dcfbb02ceeb0ce39aeb68a8d167e1cf8